WEB-3075 Updated button styling to prevent wrapping

--- a/fid-web/src/main/webapp/style/newCss/asset/actions-menu.css
+++ b/fid-web/src/main/webapp/style/newCss/asset/actions-menu.css
@@ -11,6 +11,10 @@
     position:relative;
 }
 
+.actions ul {
+    width: 75px;
+}
+
 .menu-items {
     display:none; 		/* made visible by jquery click*/
     position: absolute;
